Feat/past work timeline payment emails (#71)
Co-authored-by: Vaishnavi Bhosale <vbhosale0639@gmail.com>
Co-authored-by: Kanishka0709 <kanishkaamrutkar0709@gmail.com>